<resources>
    <string name="app_name">WhatToDo</string>
    <string name="strLogin">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPW">Confirm Password</string>
    <string name="email">Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="submit">Submit</string>
    <string name="groups">Groups</string>
    <string name="creategroup">Create New Group</string>
    <string name="leavegroup">Leave Group</string>
    <string name="logo">Logo</string>

    <string-array name="days_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="weeks_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="title_activity_create_task">CreateTask</string>
</resources>
