<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.WhatToDo.GroupList">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="167dp"
        android:layout_marginRight="167dp"
        android:text="@string/groups"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/creategroupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="144dp"
        android:text="@string/creategroup"
        android:textSize="18sp" />

    <Button
        android:id="@+id/leavegroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="70dp"
        android:text="@string/leavegroup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:layout_marginBottom="134dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ScrollView
        android:layout_width="404dp"
        android:layout_height="371dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="266dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="233dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-17dp"
        android:layout_marginRight="-17dp"
        android:layout_marginBottom="498dp"
        app:srcCompat="@drawable/logov1" />

</RelativeLayout>